--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,11 @@
 <head>
 	<title>Fonbet history</title>
 	<script src="popup.js"></script>
-	<script src="popup.css"></script>
+	<script src="background.js"></script>		
 </head>
 
-<body>
+<body style="width:300px;">
 	<h1>Fonbet history</h1>
-	<div class = "test">text</div>
 	<button id="download">Download history</button>
 </body>
 
