--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,12 @@
 <head>
 	<title>Fonbet history</title>
 	<script src="popup.js"></script>
-	<script src="background.js"></script>		
+	<script src="background.js"></script>
 </head>
 
 <body style="width:300px;">
-	<h1>Fonbet history</h1>
-	<button id="download">Download history</button>
+	<h3>Fonbet history</h3>
+	<p1>click ok if you want to download the operation history</p1>
 </body>
 
 </html>
